@@ -3,24 +3,21 @@
   <tr>
     <td width="10%" align="left" valign="center">
       <a href="http://sourceforge.net"> 
-        <img
-            src="http://sourceforge.net/sflogo.php?group_id=11795"
-            width="88" height="31" border="0" alt="SourceForge Logo"></a>
+      <img
+      src="http://sourceforge.net/sflogo.php?group_id=11795"
+      width="88" height="31" border="0" alt="SourceForge Logo"></a>
     </td>
-    <td width="10%" align="left" valign="center">
-        <font size="-2">
-          hosts this site.
-        </font>
+    <td width="20%" align="left" valign="center">
+      hosts this site.
     </td>
     <td>
     </td>
-    <td width="20%" align="right" valign="center">
-      <font size="-2">
-        Send comments to:<br>
-        <a href="mailto:cppunit-devel@lists.sourceforge.net">CppUnit Developers</a>
-      </font>
+    <td align="right" valign="center">
+      Send comments to:<br>
+      <a href="mailto:cppunit-devel@lists.sourceforge.net">CppUnit Developers</a>
     </td>
   </tr>
 </table>
+
 </body> 
 </html>
