@@ -1,25 +1,26 @@
 <html>
 <head>
-  <title>
-    CppUnit - The Unit Testing Library
-  </title>
-  <link href="doxygen.css" rel="stylesheet" type="text/css">
+<title>
+CppUnit - The Unit Testing Library
+</title>
+<link href="doxygen.css" rel="stylesheet" type="text/css">
 </head>
+
 <body bgcolor="#ffffff"> 
 <table width="100%">
   <tr>
-    <td width="10%" align="left" valign="center">
-      <font size="-2">
-        <a href="http://sourceforge.net/projects/cppunit">
-          CppUnit project page
-        </a>
-      </font>
+    <td width="40%" align="left" valign="center">
+      <a href="http://sourceforge.net/projects/cppunit">
+      CppUnit project page
+      </a>
     </td>
-    <td width="20%" align="right" valign="center">
-      <font size="-2">
-        <a href="http://cppunit.sourceforge.net">CppUnit home page</a>
-      </font>
+    <td>
+      <a href="FAQ">FAQ</a>
+    </td>
+    <td width="40%" align="right" valign="center">
+      <a href="http://cppunit.sourceforge.net">CppUnit home page</a>
     </td>
   </tr>
 </table>
+
 <hr>
