@@ -28,9 +28,6 @@
  <a href="http://www.gnu.org/copyleft/lesser.html">
  Lesser General Public License</a>.
 
-
- 
- 
  \author Eric Sommerlade (sommerlade@gmx.net)
  \author Michael Feathers (mfeathers@objectmentor.com)
  \author Jerome Lacoste (lacostej@altern.org)
